# predWC

./: .gitignore  README.md  analisis_nlp.md  apis.txt  bracket_tracker.py  evaluate_model.py  indicaciones.txt  install_all.py  pyproject.toml  show_results.py  skills-lock.json  stacking_model.py  stacking_model_nlp.py
data/: actual_knockout_results.json  elo_history.parquet  elo_rankings.json  fifa_rankings.json  knockout_matches.json  knockout_predictions.csv  knockout_predictions_nlp.csv  team_code_map.json  team_features.csv  team_features.parquet  team_nlp_features.json  training_dataset.csv  training_dataset.parquet
data/raw_comments/: algeria.json  argentina.json  australia.json  austria.json  belgium.json  bosnia-herzegovina.json  brazil.json  canada.json  cape_verde.json  colombia.json  congo_dr.json  croatia.json  ecuador.json  egypt.json  england.json  france.json  germany.json  ghana.json  iran.json  ivory_coast.json  japan.json  mexico.json  morocco.json  netherlands.json  norway.json  paraguay.json  portugal.json  scotland.json  senegal.json  south_africa.json  south_korea.json  spain.json  sweden.json  switzerland.json  united_states.json  uruguay.json
data/raw_news/: _general_feeds.json  algeria.json  argentina.json  australia.json  austria.json  belgium.json  bosnia-herzegovina.json  brazil.json  canada.json  cape_verde.json  colombia.json  congo_dr.json  croatia.json  ecuador.json  egypt.json  england.json  france.json  germany.json  ghana.json  iran.json  ivory_coast.json  japan.json  (+15 more)
scripts/: compute_team_embeddings.py  fetch_elo.py  fetch_elo_history.py  fetch_knockout_matches.py  fetch_team_comments.py  fetch_team_news.py  update_data.py
