[project]
name = "predwc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "lightgbm>=4.6.0",
    "marimo>=0.23.10",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "polars>=1.41.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "selenium>=4.45.0",
    "soccerdata[sofifa]>=1.9.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.1.2",
    "xgboost>=3.3.0",
]
