[project]
name = "predwc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "playwright>=1.60.0",
    "polars>=1.41.2",
    "requests>=2.34.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
